# Apha-Edge

./: .env.demo.example  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_market_data_schema.py  003_strategy_schema.py  004_backtesting_schema.py  005_portfolio_risk_schema.py  006_optimization_schema.py  007_execution_schema.py  008_insights_schema.py  009_production_schema.py  010_advanced_schema.py  011_timescale_bars.py  012_payments_live_trading.py  013_email_verification.py  014_strategy_deployments.py  015_indian_order_fields.py  016_drop_outbox.py
backend/cpp/: pyproject.toml  setup.py
backend/cpp/src/: engine.hpp  indicators.hpp  module.cpp
backend/scripts/: backtest_cli.py  benchmark_backtest.py  load_test.py  mock_smoke_test.py  replay_events.py  seed_data.py  seed_demo_user.py
backend/src/alphaedge/: config.py  dependencies.py  main.py
backend/src/alphaedge/modules/sec/: __init__.py
backend/src/alphaedge/shared/application/: bus.py  unit_of_work.py
backend/src/alphaedge/shared/domain/: exceptions.py  rate_limit.py  (+1 more)
backend/tests/: conftest.py  helpers.py
backend/tests/e2e/: conftest.py  test_full_stack.py
backend/tests/integration/: test_advanced.py  test_auth.py  test_backtesting.py  test_deployment_signal_flow.py  test_execution.py  test_health.py  test_insights.py  test_market_data.py  test_optimization.py  test_portfolio.py  test_production.py  test_risk_gate.py  test_strategy.py  test_strategy_deployment.py
backend/tests/unit/: test_alpaca_broker.py  test_analytics_exposure.py  test_backtesting.py  test_broker_registry.py  test_collab_rooms.py  test_cpp_engine.py  test_domain.py  test_execution.py  test_generation_footer.py  test_genetic_optimizer.py  test_insights.py  test_market_data.py  test_mock_content.py  test_oauth.py  test_optimization.py  test_org_authz.py  test_portfolio_risk.py  test_quotes.py  test_rate_limit.py  test_risk_cache.py  test_risk_gate.py  test_strategy.py  test_strategy_runner.py  test_strategy_sandbox.py
(+345 files in other folders)
