[project]
name = "alphaedge"
version = "1.1.0"
description = "Quantitative trading research and execution platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "optuna>=3.6.0",
    "stripe>=11.0.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaedge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: tests requiring Postgres (run with make test-integration)",
    "e2e: end-to-end tests against a running API stack (run with make test-e2e)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/dependencies.py" = ["B008"]
"**/*router*.py" = ["B008"]
"**/mock_content.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
# Gradual typing: strict mode deferred until existing annotations are cleaned up (~400 errors today).
# Run `make lint-types` locally; not enforced in CI until the backlog is cleared.
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.coverage.run]
source = ["alphaedge"]
omit = ["*/tests/*"]
